tests/test024.err
error: test024.tig:3:12: `nil' cannot appear here
