tests/test024.tig
/* ERR: illegal nil */
let
  var x := nil
in
end
